src/pages/UniversalSwap/SwapV3/index.module.scss
@import 'src/styles/mixins';
@import 'src/styles/variables';
@import 'src/styles/themes';

.swap-box-wrapper {
  border-radius: 12px;
  position: sticky;
  top: 125px;

  .custom-loader-root {
    border-radius: 12px;
  }

  .christmas-img {
    position: absolute;
    z-index: 24;
  }

  .loadingRefresh {
    opacity: 0.4;
  }

  .ball {
    top: 0;
    left: -9px;
  }

  .gift {
    bottom: 0;
    right: -32px;
  }
}

.swap-box {
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  // padding: 16px 16px 32px 16px;
  padding: 24px;
  width: 100%;
  backdrop-filter: blur(5px);
  border-radius: 12px;

  @include theme() {
    border: 1px solid theme-get('neutral-6');
    background: theme-get('neutral-white');
    box-shadow: theme-get('shadow-swap-box');
  }

  @include mobile {
    position: static;
    padding: 16px;
    margin: 0;
    background: none;
    box-shadow: none;
    backdrop-filter: none;
  }

  .header {
    display: flex;
    align-items: center;
    width: 100%;
    gap: 12px;
    // padding: 10px 10px 16px;
    padding: 0 0px 16px 16px;
    margin-top: -6px;

    .title {
      font-style: normal;
      font-weight: 600;
      font-size: 16px;
      line-height: 100%;
      margin: 5.5px 0;
      flex-grow: 1;

      @include mobile {
        font-size: 14px;
      }

      letter-spacing: 0.02em;

      @include theme() {
        color: theme-get('text-color');
      }
    }

    .btn {
      cursor: pointer;
      display: flex;
      border-radius: 8px;
      padding: 12px;

      @include theme() {
        background-color: theme-get('bg-color-secondary');
      }

      svg {
        path {
          @include theme() {
            fill: theme-get('svg-fill-color');
          }
        }
      }
    }
  }

  .from,
  .to {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 16px;
    gap: 15px;
    width: 100%;
    border-radius: 8px;

    @include theme() {
      background: theme-get('neutral-6');
    }

    @include mobile {
      border: none;
      border-radius: 8px;
      background: none;
      box-shadow: none;
      padding: 16px;
    }

    /* Inside auto layout */

    .token-info {
      flex-grow: 1;

      display: flex;
      flex-direction: row;
      align-items: flex-start;
      gap: 10px;
    }

    .token-symbol {
      font-weight: 500;
      font-size: 24px;
    }

    .ratio {
      @include theme() {
        color: theme-get('neutral-9');
      }

      font-size: 13px;
      font-weight: 400;
      line-height: 150%;
      letter-spacing: 0.013px;
      padding-top: 13px;
    }
  }

  .coeff {
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding-top: 12px;
    padding-bottom: 14px;
    font-size: 14px;
    gap: 8px;

    button {
      border-radius: 99px;
      display: flex;
      height: 35px;
      padding: 13px;
      justify-content: center;
      align-items: center;
      flex: 1 0 0;

      @include theme() {
        color: theme-get('neutral-text-text-dropdown');
        background-color: theme-get('neutral-surface-bg-section-3');
      }

      &:hover {
        @include theme() {
          background-color: theme-get('neutral-surface-bg-section-hover');
          opacity: 1;
        }
      }
    }

    .is-active {
      @include theme() {
        color: theme-get('sea-stone-800');
        border: 1px solid theme-get('sea-stone-800');
        background-color: theme-get('neutral-surface-bg-section-active');
      }
    }
  }

  .token-org {
    opacity: 0.5;
    font-size: 13px;
    width: max-content;
  }

  .balance {
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 150%;
    /* identical to box height, or 21px */

    text-align: center;
    font-feature-settings: 'ss03' on;

    /* aiRight/Gray 3 */

    color: #777e90;

    display: flex;
    gap: 8px;
    width: 100%;

    .btn {
      cursor: pointer;
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
      padding: 4px 6px;

      @include theme() {
        background-color: theme-get('bg-color-active');
      }

      border-radius: 4px;

      font-style: normal;
      font-weight: 500;
      font-size: 13px;
      line-height: 100%;
      /* identical to box height, or 13px */

      /* Stroke/Primary */

      color: #a871df;

      &:hover {
        @include theme() {
          background-color: theme-get('bg-color-active');
        }
      }
    }

    .active {
      @include theme() {
        background-color: theme-get('bg-color-active');
      }
    }
  }

  .input-wrapper {
    width: 100%;
    position: relative;

    @include medium-desktop {
      .input {
        font-size: 20px;

        .amount {
          font-size: 18px;
        }
      }
    }

    .token-fee {
      display: flex;
      align-items: center;
      justify-content: space-between;
      font-weight: 500;
      color: #777e90;
      margin-top: 10px;
    }
  }

  .input {
    /* Auto layout */
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    gap: 5px;

    @include theme() {
      background: theme-get('bg-color-secondary');
      color: theme-get('text-color');
    }

    border-radius: 8px;

    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 100%;
    /* identical to box height, or 24px */

    text-align: center;
    font-feature-settings: 'tnum' on, 'lnum' on, 'zero' on;

    .token {
      cursor: pointer;
      display: flex;

      align-items: center;

      gap: 5px;

      .logo {
        width: 32px;
        height: 32px;
      }

      .arrow-down {
        width: 0;
        height: 0;
        border-left: 6px solid transparent;
        border-right: 6px solid transparent;

        @include theme() {
          border-top: theme-get('bg-color-arrow');
        }
      }
    }

    .amount {
      flex-grow: 1;
      text-align: right;
      max-width: 50%;
      width: inherit;

      @include mobile {
        width: 100%;
      }
    }
  }
}

.from {
  .impact-warning {
    .title {
      span {
        color: #e01600;
      }
    }
  }

  @include mobile {
    border-bottom: 1px solid;
  }
}

.to {
  input.amount {
    color: #505665;
  }

  @include mobile {
    border-top: 1px solid;
  }
}

.swap-icon {
  padding: 3px;

  @include mobile {
    padding: 3px;
  }

  @include theme() {
    background-color: theme-get('bg-btn-switch');
  }

  .wrap-img {
    position: absolute;
    transform: translate(-50%, -50%);
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;

    @include theme() {
      background-color: theme-get('neutral-white');
      border: 6px solid theme-get('neutral-white');

      @include mobile {
        border: 4px solid theme-get('neutral-white');
      }
    }

    img {
      border-radius: 50%;
      // background-color: #f7f7f7;
      cursor: pointer;
      height: 38px;
      width: 38px;

      @include theme() {
        background-color: theme-get('neutral-surface-bg-section');
      }

      // position: absolute;
      // transform: translate(-50%, -50%);
      @include mobile {
        height: 24px;
        width: 24px;
      }
    }
  }
}

.swap-btn-wrapper {
  position: relative;
  width: 100%;

  .snow-left {
    position: absolute;
    z-index: 1;
    bottom: 5px;
    left: -5px;
  }

  .snow-right {
    position: absolute;
    z-index: 1;
    top: -13px;
    right: 0;
  }
}

.swap-btn {
  width: 100%;
  gap: 5px;

  background-image: url('../../../assets/images/christmas/btn-bg.svg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  @include theme() {
    // background-color: theme-get('primary-1');
    color: #232521;
  }

  &.disable {
    @include theme() {
      background-image: unset;
      background-color: theme-get('neutral-5');
      color: theme-get('neutral-8');
    }
  }

  border-radius: 99px;
  padding: 16px;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 100%;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffffff;
  cursor: pointer;
  margin: 16px 0;

  svg {
    margin: 0 5px 0 0 !important;
  }
}

.detail {
  padding: 16px;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 8px;
  border-radius: 8px;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 150%;
  /* identical to box height, or 21px */

  // text-align: center;
  font-feature-settings: 'ss03' on;

  /* aiRight/Gray 3 */
  @include theme() {
    background-color: theme-get('neutral-6');
    color: theme-get('neutral-8');
  }

  .row {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .title {
      width: 70%;
      display: flex;
      justify-content: flex-start;
      // align-items: center;
      gap: 5px;
    }

    .value {
      text-align: right;
    }
  }
}

